--- a/Kafala.Web.UI/packages.config
+++ b/Kafala.Web.UI/packages.config
@@ -5,4 +5,5 @@
   <package id="jQuery.vsdoc" version="1.6" targetFramework="net40" />
   <package id="structuremap" version="2.6.4.1" targetFramework="net40" />
   <package id="Twitter.Bootstrap" version="2.3.1" targetFramework="net40" />
+  <package id="VortexSoft.Bootstrap" version="1.0.0" targetFramework="net40" />
 </packages>
