added authentication abstraction

--- a/Foundation.Persistence/Foundation.Persistence.csproj
+++ b/Foundation.Persistence/Foundation.Persistence.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectionString.cs" />
+    <Compile Include="IAuthenticatableUser.cs" />
     <Compile Include="IConnectionString.cs" />
     <Compile Include="ISessionFactoryProvider.cs" />
     <Compile Include="ISessionProvider.cs" />
