--- a/Kafala.BusinessManagers/Kafala.BusinessManagers.csproj
+++ b/Kafala.BusinessManagers/Kafala.BusinessManagers.csproj
@@ -59,10 +59,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Security\Password.cs" />
     <Compile Include="Donor\DonorInterceptor.cs" />
     <Compile Include="Donor\DonorBusinessManager.cs" />
-    <Compile Include="Security\KafalaFormAuthentication.cs" />
     <Compile Include="SqlProcBusinessManagerInvocationLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -86,6 +84,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Security\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
