--- a/Kafala.Web.UI/packages.config
+++ b/Kafala.Web.UI/packages.config
@@ -3,6 +3,10 @@
   <package id="jQuery" version="1.9.1" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net40" />
   <package id="jQuery.vsdoc" version="1.6" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="structuremap" version="2.6.4.1" targetFramework="net40" />
   <package id="Twitter.Bootstrap" version="2.3.1" targetFramework="net40" />
   <package id="VortexSoft.Bootstrap" version="1.0.0" targetFramework="net40" />
