added some nuget packages, etc.

--- a/Kafala.Web.UI/Web.config
+++ b/Kafala.Web.UI/Web.config
@@ -17,7 +17,7 @@
   <location path="Scripts">
     <system.web>
       <authorization>
-        <allow users="?" />
+        <allow users="*" />
       </authorization>
     </system.web>
   </location>
