--- a/Foundation.Infrastructure/Foundation.Infrastructure.csproj
+++ b/Foundation.Infrastructure/Foundation.Infrastructure.csproj
@@ -61,6 +61,9 @@
     <Compile Include="BL\IBusinessManagerContainer.cs" />
     <Compile Include="BL\IBusinessManagerRegistery.cs" />
     <Compile Include="BL\IBusinessManagerInvocationLogger.cs" />
+    <Compile Include="Notifications\EmailService.cs" />
+    <Compile Include="Notifications\IEmailService.cs" />
+    <Compile Include="Notifications\NotificationHelper.cs" />
     <Compile Include="QueryRegistery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query\QueryRegisterationConventrion.cs" />
@@ -80,6 +83,7 @@
       <Name>Kafala.Entities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
