Some Populators and views .. Comments to Dynamic form builder ..

--- a/Kafala.Web.UI/Kafala.Web.UI.csproj
+++ b/Kafala.Web.UI/Kafala.Web.UI.csproj
@@ -111,11 +111,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-<<<<<<< HEAD
-    <Compile Include="Controllers\DonorCreateModelPopulator.cs" />
-=======
     <Compile Include="App_Start\BootstrapBundleConfig.cs" />
->>>>>>> c0bfeff705313a0f2de147ab06f13fcc0eadff40
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\DonorController.cs" />
     <Compile Include="Global.asax.cs">
@@ -237,10 +233,9 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\jquery-2.0.3.min.map" />
+    <Content Include="Views\Donor\View.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="packages.config">
       <SubType>Designer</SubType>
