--- a/Kafala.Web.UI/packages.config
+++ b/Kafala.Web.UI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="3.0.0" targetFramework="net40" />
   <package id="jQuery" version="2.0.3" targetFramework="net40" />
   <package id="jQuery.Ajax.Unobtrusive" version="2.0.20710.0" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net40" />
