--- a/Kafala.Web.ViewModels/Kafala.Web.ViewModels.csproj
+++ b/Kafala.Web.ViewModels/Kafala.Web.ViewModels.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <Folder Include="Donor\Partial\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Kafala.Entities\Kafala.Entities.csproj">
+      <Project>{007BEF04-E3B6-422A-9BD6-E9E7B2BA3E4E}</Project>
+      <Name>Kafala.Entities</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
