--- a/VortexSoft.Bootstrap/VortexSoft.Bootstrap.csproj
+++ b/VortexSoft.Bootstrap/VortexSoft.Bootstrap.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Collections\Generic\PairCollection.cs" />
     <Compile Include="Collections\Generic\PowerCollections\Pair.cs" />
     <Compile Include="Collections\Generic\PowerCollections\Strings.cs" />
+    <Compile Include="CustomAttribute\ControlType.cs" />
+    <Compile Include="DynamicForm\FormControlGenerator.cs" />
+    <Compile Include="DynamicForm\FormElement.cs" />
+    <Compile Include="DynamicForm\NavHtmlTextWritter.cs" />
     <Compile Include="DynamicView\BootstrapDynamicViewBuilder.cs" />
     <Compile Include="DynamicView\IDynamicViewBuilder.cs" />
     <Compile Include="GlyphIcons.cs" />
