--- a/Kafala.Web.UI/Views/Web.config
+++ b/Kafala.Web.UI/Views/Web.config
@@ -16,6 +16,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="Kafala.Web.ViewModels" />
         <add namespace="VortexSoft.Bootstrap" />
+        <add namespace="Foundation.FormBuilder" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
