Refactoring of form builder again ..

--- a/Foundation.FormBuilder/Foundation.FormBuilder.csproj
+++ b/Foundation.FormBuilder/Foundation.FormBuilder.csproj
@@ -48,16 +48,19 @@
     <Compile Include="Blocks\ControlContainer.cs" />
     <Compile Include="Blocks\ControlGroup.cs" />
     <Compile Include="Blocks\ElementGroup.cs" />
+    <Compile Include="CustomAttribute\ValidationInfo.cs" />
+    <Compile Include="DynamicForm\BootStrapViewBuilder.cs" />
+    <Compile Include="DynamicForm\UiBuilderBase.cs" />
+    <Compile Include="ElementGenerators\FormElementGenerator.cs" />
+    <Compile Include="ElementGenerators\IElementGenerator.cs" />
+    <Compile Include="ElementGenerators\ViewElementGenerator.cs" />
     <Compile Include="FormBuilder.cs" />
     <Compile Include="CustomAttribute\CollectionInfo.cs" />
     <Compile Include="CustomAttribute\ControlType.cs" />
-    <Compile Include="DynamicForm\BootstrapDynamicFormBuilder.cs" />
-    <Compile Include="DynamicForm\BootstrapDynamicViewBuilder.cs" />
+    <Compile Include="DynamicForm\BootStrapFormBuilder.cs" />
     <Compile Include="DynamicForm\BootstrapFormType.cs" />
-    <Compile Include="DynamicForm\FormControlGenerator.cs" />
-    <Compile Include="DynamicForm\FormElement.cs" />
-    <Compile Include="DynamicForm\IDynamicFormBuilder.cs" />
-    <Compile Include="DynamicForm\IDynamicViewBuilder.cs" />
+    <Compile Include="CustomAttribute\FormElement.cs" />
+    <Compile Include="DynamicForm\IDynamicUiBuilder.cs" />
     <Compile Include="DynamicForm\NavHtmlTextWritter.cs" />
     <Compile Include="HtmlHelperExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
