--- a/Kafala.Web.UI/Kafala.Web.UI.csproj
+++ b/Kafala.Web.UI/Kafala.Web.UI.csproj
@@ -229,6 +229,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Donor\View.cshtml" />
+    <Content Include="Views\Donor\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
